dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([configure.ac])
AC_CANONICAL_TARGET([])
AC_GNU_SOURCE

dnl For Automake
PACKAGE=nginx-poller-module
VERSION=1.0

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

echo ""
echo "Configure finished!"
echo ""
